--- a/ue5/Mortar/Config/DefaultInput.ini
+++ b/ue5/Mortar/Config/DefaultInput.ini
@@ -76,8 +76,8 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="CannonForward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
-+ActionMappings=(ActionName="CannonBack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
++ActionMappings=(ActionName="CannonForward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
++ActionMappings=(ActionName="CannonBack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
